labs/06-repetition/ha-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ha-api
  name: ha-api
  namespace: scheduling-lab
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ha-api
  strategy: {}
  template:
    metadata:
      labels:
        app: ha-api
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - ha-api
            topologyKey: "kubernetes.io/hostname"
      containers:
        - image: nginx:alpine
          name: nginx
          resources: {}
status: {}
