labs/06-repetition/web-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web-frontend
  name: web-frontend
  namespace: scheduling-lab
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-frontend
  strategy: {}
  template:
    metadata:
      labels:
        app: web-frontend
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app 
                operator: In
                values:
                - cache
            topologyKey: kubernetes.io/hostname
      containers:
        - image: nginx:alpine
          name: nginx
          resources: {}
status: {}
