labs/06-repetition/default-deny-eggress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-egress
  namespace: netpol-lab
spec:
  podSelector:
    matchLabels:
      app: client
  policyTypes:
  - Egress
